DeveloperOrg/force-app/main/default/objects/Registration__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Registration</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>