DeveloperOrg/force-app/main/default/objects/Registration__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Registration</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>